unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/ET_SOA_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>ET_SOA_Endpoint</label>
    <pluralLabel>ET_SOA_Endpoints</pluralLabel>
</CustomObject>