unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/isLive__c.field-meta.xml
<CustomField>
    <fullName>isLive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLive</label>
    <type>Checkbox</type>
</CustomField>