unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/Live_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_URL__c</fullName>
    <label>Live URL</label>
    <type>Url</type>
</CustomField>