unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/LiveEndpoint__c.field-meta.xml
<CustomField>
    <fullName>LiveEndpoint__c</fullName>
    <label>Live Endpoint</label>
    <type>Url</type>
</CustomField>