unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <label>OrgID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>