unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Enter password for username authentication to ETSOA services</description>
    <inlineHelpText>Enter password for username authentication to ETSOA services</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>