unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <defaultValue>&quot;SalesForce&quot;</defaultValue>
    <label>Source System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>