unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>