unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/TestEndpoint__c.field-meta.xml
<CustomField>
    <fullName>TestEndpoint__c</fullName>
    <label>Test Endpoint</label>
    <type>Url</type>
</CustomField>