unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Enter username for authentication to ETSOA services</description>
    <inlineHelpText>Enter username for authentication to ETSOA services</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>