unpackaged/main/default/objects/ET_SOA_Endpoint__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>isLive__c</columns>
    <columns>LiveEndpoint__c</columns>
    <columns>Live_URL__c</columns>
    <columns>OrgID__c</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <columns>RecordTypes__c</columns>
    <columns>Source_System__c</columns>
    <columns>TestEndpoint__c</columns>
    <columns>Test_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>